# dosctl

./: .gitignore  .releaserc.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  autoremove.sh  mise.toml  pyproject.toml  release_notes.md
.github/: SEMANTIC_RELEASE.md
.github/workflows/: publish.yml  semantic-release.yml
scripts/: dune.py  prepare-release.sh  sc2.py
src/dosctl/: __init__.py  config.py  main.py
src/dosctl.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/dosctl/collections/: README.md  archive_org.py  base.py  factory.py
src/dosctl/commands/: alias.py  delete.py  info.py  inspect.py  list.py  net.py  play.py  refresh.py  run.py  search.py  version.py
src/dosctl/lib/: aliases.py  config_store.py  decorators.py  discovery.py  display.py  dosbox.py  executables.py  game.py  network.py  platform.py  system.py  ui.py  upnp.py  wordlist.txt
src/dosctl/lib/dosbox/: __init__.py  base.py  launcher.py  standard.py
src/dosctl/lib/platform/: __init__.py  base.py  factory.py  unix.py  windows.py
tests/: test_aliases.py  test_collections.py  test_config.py  test_config_store.py  test_decorators.py  test_discovery.py  test_display.py  test_executables.py  test_integration.py  test_network.py  test_platform.py  test_upnp.py
tests/collections/: test_factory.py
tests/commands/: test_alias.py  test_delete.py  test_dosbox_config.py  test_info.py  test_inspect.py  test_list.py  test_net.py  test_play.py  test_refresh.py  test_run.py  test_search.py  test_version.py
