[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "dosctl"
version = "0.1.0"
description = "A command-line tool to manage and play DOS games."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "click",
    "requests",
    "tqdm",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[project.scripts]
dosctl = "dosctl.main:cli"



[tool.setuptools.packages.find]
where = ["src"]
